# Linux-server-coding

./: 5_1.c  5_10.cpp  5_11.cpp  5_12.cpp  5_2.c  5_3.cpp  5_4.cpp  5_6.cpp  5_7.cpp  6_1.cpp  6_2.cpp  6_3.cpp  6_4.cpp  6_5.cpp  8_3.cpp  9_1.cpp  9_3.cpp  9_4.cpp  9_5.cpp  9_6.cpp  9_7.cpp  CMakeLists.txt  README.md  newWord.md
