cmake_minimum_required(VERSION 3.22)
project(Linux_server_coding CXX)

set(CMAKE_C_STANDARD 11)

add_executable(Linux_server_coding
                    5_4.cpp 5_6.cpp 5_10.cpp 5_10.cpp 5_11.cpp 5_12.cpp 6_1.cpp 6_2.cpp 6_3.cpp 6_4.cpp 6_4.cpp 6_5.cpp 8_3.cpp 9_1.cpp 9_3.cpp 9_4.cpp 9_5.cpp 9_6.cpp 9_7.cpp)
